[fix] custom tab component spacing correction

--- a/frontend/src/app/modules/books/pages/bookcase/bookcase.component.scss
+++ b/frontend/src/app/modules/books/pages/bookcase/bookcase.component.scss
@@ -11,7 +11,6 @@
 
         app-tabs {
           app-tab {
-            margin-top: 2em;
             display: flex;
             flex-direction: column;
             gap: 2em;
