--- a/frontend/src/app/shared/components/tabs/tabs.component.scss
+++ b/frontend/src/app/shared/components/tabs/tabs.component.scss
@@ -12,6 +12,7 @@
             background-color: $white;
             color: $purple-2;
             width: 100%;
+            margin-bottom: 2em;
 
             .tab {
                 flex: 1;
